<resources>
    <string name="app_name">Krafty</string>
    <string name="createacc">Create your account!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="krafter">Krafter</string>
    <string name="kraftee">Kraftee</string>
    <string name="acctype">Account Type</string>
    <string name="desc">Description</string>
    <string name="startDate">Start</string>
    <string name="noDate">No date selected</string>
    <string name="endDate">End</string>
    <string name="eventExpl">Enter event details.</string>
    <string name="signup">Sign Up!</string>
    <string name="location">Location</string>
    <string name="pass">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="icon">User Icon</string>
    <string name="loginMessage">Log in to get started!</string>
    <string name="username">Username</string>
    <string name="lblPassword">Password</string>
    <string name="login">Log in</string>
    <string name="registerMessage">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="etsy">Etsy</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="website">Website</string>
    <string name="krafteedesc">As a Kraftee, you can find events, add them to your schedule, and find the vendors you\'re looking for!</string>
    <string name="submit">Submit</string>
    <string name="bio_prompt">Tell us something about yourself!</string>
    <string name="inventory">Inventory</string>
    <string name="krafterdesc">As a krafter, you will receive all the benefits of a Kraftee, plus inventory management and the ability to schedule your own crafting times and events!</string>
    <string name="business">Business name</string>
    <string name="materialLabel">Create A New Material</string>
    <string name="matName">Material Name</string>
    <string name="purchasedFrom">Purchase Location</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="products">Products</string>
    <string name="materials">Materials</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="update">Update</string>
    <string name="eventName">Event Name</string>
    <string name="eventDesc">Description</string>
    <string name="eventAddress">Event Address</string>
    <string name="eventDate">Event Date</string>
    <string name="eventTimeStart">start</string>
    <string name="eventTimeEnd">end</string>
    <string name="eventNoEndTime">No closing time</string>
    <string name="eventNoStartTime">No opening time</string>
    <string name="eventOpenTime">Opens</string>
    <string name="eventCloseTime">Closes</string>
    <string name="eventTo">to</string>
    <string name="eventVendorSpots">Max vendors allowed: </string>
    <string name="eventVendorNum">Capacity of Krafters</string>
    <string name="eventVendorSignedUp">Vendors signed up: </string>
    <string name="eventVendorNumber">vendor num</string>
    <string name="eventOutdoors">Outdoors: </string>
    <string name="eventSwitchOutdoors">Outdoors Event?</string>
    <string name="eventPower">Power: </string>
    <string name="eventSwitchPower">Power Available?</string>
    <string name="eventFood">Food: </string>
    <string name="eventSwitchFood">Food Available?</string>
    <string name="eventWifi">WiFi: </string>
    <string name="eventSwitchWifi">Wifi Available?</string>
    <string name="eventTables">Tables: </string>
    <string name="eventSwitchTables">Tables Provided?</string>
    <string name="events">Events</string>
    <string name="zip">Zip</string>
    <string name="to">to</string>
    <string name="eventDescriptonPrompt">Let people know a little about the event!</string>
    <string name="eventSchedule">Schedule</string>
    <string name="eventUpdate">Update</string>
    <string name="eventDelete">Delete</string>
    <string name="createProduct">Create a Product</string>
    <string name="addMat">Add Material</string>
    <string name="viewProductLabel">View Product</string>
    <string name="productImage">Product Image</string>
    <string name="productName">Product Name</string>
    <string name="productDesc">Description</string>
    <string name="productPrice">Price</string>
    <string name="productQuantity">Quantity</string>
    <string name="productUpdate">Update</string>
    <string name="productDelete">Delete</string>
    <string name="matQty">Quantity</string>
    <string name="createTask">Create Task</string>
    <string name="addProd">Add Product</string>
    <string name="dateReq">Date Required</string>
    <string name="timeReq">Time Required</string>
    <string name="noTime">No time chosen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewProduct">View Product</string>
    <string name="kraftersAttendingHeading">Krafters Attending</string>
    <string name="eventUnschedule">Unschedule</string>
    <string name="prompt">Type here…</string>
    <string name="report">Thank you for taking the time to report inappropriate behavior. We review all reports and take all claims seriously. Please tell us what violated community guidelines below.</string>

</resources>
